--- a/manifest.json
+++ b/manifest.json
@@ -13,8 +13,8 @@
         "type": "image/png"
       },
   {
-        "src": "./images/ip p3.png",
-        "sizes": "4032x2973",
+        "src": "./images/man.jpg",
+        "sizes": "5430x3620",
         "type": "image/png"
       }
     ]
