--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
         "type": "image/png"
       },
   {
-        "src": "./images/square.jpg",
+        "src": "./images/square.png",
         "sizes": "723x723",
         "type": "image/png"
       }
